[tool.poetry]
name = "nirddmc"
version = "0.1.1"
description = "Tool for creating local intake esm catalogs of ESGF organized data"
authors = ["Ove <ovehaugv@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
typer = "^0.12.3"
intake-esm = "^2024.2.6"
dask = "^2024.4.2"
ecgtools = "^2023.7.13"
aiohttp = "^3.9.5"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Installing the CLI for building the intake catalog csv
[tool.poetry.scripts]
nirddmc = "nirddmc.main:app"