[tool.poetry]
name = "nirddmc"
version = "0.1.1"
description = "Tool for creating local intake esm catalogs of ESGF organized data"
authors = ["Ove <ovehaugv@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.16.0"
intake-esm = "^2025.7.9"
dask = "^2025.7.0"
ecgtools = "^2024.7.31"
aiohttp = "^3.12.14"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Installing the CLI for building the intake catalog csv
[tool.poetry.scripts]
nirddmc = "nirddmc.main:app"